--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
         <div class="col-12 text-center">
 
-          <p class="mb-0">Copyright &copy;
+          <p class="mb-0 fs-6">Copyright &copy;
             <script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed by Uday,
             based on a template by ThemeWagon <a href="https://untree.co">Untree.co</a>
         </div>
