--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@
 
       <div class="row">
 
-        <div class="col-12 text-center">
+        <div class="col-12 text-center text-small">
 
-          <p class="mb-0">Copyright &copy;
+          <p class="mb-0 fs-sm">Copyright &copy;
             <script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed by Uday,
             based on a template by ThemeWagon <a href="https://untree.co">Untree.co</a>
         </div>
