--- a/portfolio-single-3.html
+++ b/portfolio-single-3.html
@@ -44,7 +44,7 @@
                 <div class="col-sm-6 col-md-6 col-lg-6 mb-4">
                   <div class="detail-v1">
                     <span class="detail-label">Live demo</span>
-                    <span class="detail-val"><a target="_blank" href="https://github.com/uday-bhatiya/real-estate">https://github.com/uday-bhatiya/real-estate</a></span>
+                    <span class="detail-val"><a target="_blank" href="https://real-estate-gr8i.onrender.com/">https://real-estate-gr8i.onrender.com/</a></span>
                   </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6 mb-4">
